# parakeet-rs

./: .gitignore  Cargo.toml  Info.plist  LICENSE-MIT  README.md  build.rs  entitlements.plist  package.json  tsconfig.json  vite.config.ts
assets/: icon.icns
bench/: .gitignore  README.md  cleanup-backends.csv
docs/: ADR.md  gemma4-mlx-implementation.md  latency-plan.md
scripts/: bench-aggregate.py  bench-latency.sh  make-app.sh  make-icon.sh
src/: app.rs  app_delegate.rs  asr.rs  audio.rs  ax_paste.rs  cleanup.rs  dictation_fsm.rs  hotkey.rs  hud.rs  index.html  keychain.rs  lib.rs  llm_manager.rs  llm_warmup.rs  main.rs  main.ts  menubar.rs  model_fetch.rs  objc_util.rs  paste.rs  performance.rs  permissions.rs  polish.rs  qos.rs  settings.rs  settings_ui.rs  sf_symbol.rs  streamer.rs  styles.css  vad.rs  warmup.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  lib.rs  main.rs  model_fetch.rs  paste.rs  qos.rs  settings.rs  sf_symbol.rs  streamer.rs  vad.rs  warmup.rs
